<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, LiquidPartsActivity!</string>

    <string name="app_name">Liquid Parts</string>
    <string-array name="settings">
        <item >Tweaks</item>
        <item >Swap</item>
        <item >Voltage</item>
    </string-array>
    <string-array name="help">
        <item >F.A.Q.</item>
        <item >Help</item>
        <item >Donate</item>
    </string-array>
    <string-array name="info">
        <item >&lt;b&gt;How does Liquid Parts work?&lt;/b&gt;&lt;br&gt;
This application changes the system settings. If you want use it you need to get root rights.&lt;br&gt;&lt;br&gt;
&lt;b&gt;Who was developing application?&lt;/b&gt;&lt;br&gt;
The first developer was Suxsem, then Thepasto continued development. The developer of this version of the app - RomzesRover&lt;br&gt;&lt;br&gt;
&lt;b&gt;What could this application?&lt;/b&gt;&lt;br&gt;
• Edit sensivity for touchscreen and for softkeys&lt;br&gt;
• Edit noise for touchscreen&lt;br&gt;
• Turn on/off Haptick Feedback&lt;br&gt;
• Edit vibration strenght for softkeys&lt;br&gt;
• Turn on/off swap&lt;br&gt;
• Edit swappiness&lt;br&gt;
• edit sdCardReadAhead&lt;br&gt;&lt;br&gt;
&lt;b&gt;Sensivity and Noise&lt;/b&gt;&lt;br&gt;
The smaller the value of the sensitivity and the noise that operates responsive screen. Caution: too low values can result to false positives.&lt;br&gt;&lt;br&gt;
&lt;b&gt;What is Swapinness&lt;/b&gt;&lt;br&gt;
This is the technology transfer of RAM to swap. A value of 0 will give greater responsiveness and less free memory. A value of 100 will give more memory, but the system will slow down.</item>
 <item >&lt;b&gt;If settings can\'t apply&lt;/b&gt;&lt;br&gt;
• Try to check does you grant superuser rights to this app&lt;br&gt;
• Try to restart this app&lt;br&gt;&lt;br&gt;
&lt;b&gt;After applying new settings touch become crazy&lt;/b&gt;&lt;br&gt;
• Try to return the settings to default&lt;br&gt;
• Make a system wipe&lt;br&gt;
• Flash stock rom from 2.1 or 2.2</item>
	<item>&lt;b&gt;RomzesRover:&lt;/b&gt; (current developer)&lt;br&gt;
• PayPal: romzesrover@gmail.com&lt;br&gt;		
• Yandex money: 41001630559136&lt;br&gt;
• Play market: &lt;a href="market://search?q=pub:BigBrother\'sRover\'s&gt;BigBrother\'sRover\'s&lt;/a&gt;&lt;br&gt;&lt;br&gt;
&lt;b&gt;ThePasto:&lt;/b&gt;&lt;br&gt;
• PayPal: thepasto@gmail.com&lt;br&gt;&lt;br&gt;
&lt;b&gt;[ray:&lt;/b&gt;&lt;br&gt;
• WebMoney: R300598343390&lt;br&gt;
• WebMoney: Z939099130798
	    </item>
	    	<item>&lt;b&gt;Thank you for your purchase applications via google play ($ 1). You make the firmware better!&lt;/b&gt;&lt;br&gt;&lt;br&gt;
	    	    &lt;b&gt;RomzesRover:&lt;/b&gt; (current developer)&lt;br&gt;
• PayPal: romzesrover@gmail.com&lt;br&gt;		
• Yandex money: 41001630559136&lt;br&gt;
• Play market: &lt;a href="market://search?q=pub:BigBrother\'sRover\'s&gt;BigBrother\'sRover\'s&lt;/a&gt;&lt;br&gt;&lt;br&gt;
&lt;b&gt;ThePasto:&lt;/b&gt;&lt;br&gt;
• PayPal: thepasto@gmail.com&lt;br&gt;&lt;br&gt;
&lt;b&gt;[ray:&lt;/b&gt;&lt;br&gt;
• WebMoney: R300598343390&lt;br&gt;
• WebMoney: Z939099130798
	    </item>
    </string-array>
    <string-array name="sdaheads">
        <item>512</item>
        <item>1024</item>
        <item>2048</item>
        <item>4096</item>
    </string-array>
    <string name="separator"/>
    <string name="sens">Sensivity</string>
    <string name="vibtime">VibrationTime</string>
    <string name="hf">HaptickFeedBack</string>
    <string name="softk">SoftKeys</string>
    <string name="noise">Noise</string>
    <string name="touchscreen">TouchScreen</string>
    <string name="help">Help</string>
    <string name="save">Save and Apply</string>
    <string name="swap">Swap</string>
    <string name="enabled">Enabled</string>
    <string name="Swappiness">Swappiness</string>
    <string name="other">Other</string>
    <string name="sdcard">SDCardReadAhead</string>
    <string name="lowMem">LowMemoryKillerFix (for A1)</string>
    
    <string name="svs">Customized SVS</string>
    <string name="suggested_vdd">Set Suggested</string>
    <string name="default_vdd">Reset Default</string>
    <string name="set_on_boot">Set On Boot</string>
    <string name="custom_svs">Customized SVS</string>

<string name="tfsf">[25-75]</string>
<string name="fzsf">[50-75]</string>
<string name="oznn">[10-99]</string>
<string name="oftz">[15-20]</string>
<string name="zonn">[01-99]</string>

</resources>
