                                    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                      android:id="@+id/scrollView1"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_gravity="center_horizontal" >

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="271dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/custom_svs"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#666666"
                        android:contentDescription="@string/separator" />

                    <LinearLayout
                        android:id="@+id/linearLayout5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:id="@+id/linearLayout3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="vertical" >

                            <LinearLayout
                                android:id="@+id/LinearLayout04"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal" >

                                <TextView
                                    android:id="@+id/TextView01"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/enabled"
                                    android:textAppearance="?android:attr/textAppearanceSmall"
                                    android:textColor="#ccc" />

                                <LinearLayout
                                    android:id="@+id/LinearLayout03"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="horizontal" >

                                    <LinearLayout
                                        android:id="@+id/LinearLayout01"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:orientation="vertical" >

                                        <CheckBox
                                            android:id="@+id/CheckBoxEnabledSvs"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="right"
                                            android:paddingRight="5dp" />
                                    </LinearLayout>
                                </LinearLayout>
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/ImageView01"
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:background="#666666"
                                android:contentDescription="@string/separator" />

                            <LinearLayout
                                android:id="@+id/LinearLayout02"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:orientation="horizontal" >

                                <TableLayout
                                    android:id="@+id/TableLayout01"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="10dp"
                                    android:layout_marginTop="10dp"
                                    android:stretchColumns="0" >
                                </TableLayout>
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:background="#666666"
                                android:contentDescription="@string/separator" />

                            <LinearLayout
                                android:id="@+id/LinearLayout15"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="vertical" >

                                <Button
                                    android:id="@+id/button1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginBottom="3dp"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp"
                                    android:layout_marginTop="3dp"
                                    android:text="@string/suggested_vdd" />

                                <Button
                                    android:id="@+id/button2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginBottom="3dp"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp"
                                    android:layout_marginTop="3dp"
                                    android:text="@string/default_vdd" />
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/ImageView05"
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:background="#666666"
                                android:contentDescription="@string/separator" />

                            <LinearLayout
                                android:id="@+id/LinearLayout07"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal" >

                                <TextView
                                    android:id="@+id/TextView02"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/set_on_boot"
                                    android:textAppearance="?android:attr/textAppearanceSmall"
                                    android:textColor="#ccc" />

                                <LinearLayout
                                    android:id="@+id/LinearLayout05"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="horizontal" >

                                    <LinearLayout
                                        android:id="@+id/LinearLayout06"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:orientation="vertical" >

                                        <CheckBox
                                            android:id="@+id/CheckBoxSetOnBoot"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="right"
                                            android:paddingRight="5dp" />
                                    </LinearLayout>
                                </LinearLayout>
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/ImageView02"
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:background="#666666"
                                android:contentDescription="@string/separator" />

                            <Button
                                android:id="@+id/Button01"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:layout_marginBottom="10dp"
                                android:layout_marginTop="20dp"
                                android:text="@string/save" />

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
